--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -44,8 +44,7 @@
         {% endif %}
       </ul>
     </div>
-
-	{% if page.image and (layout.show-avatar or page.show-avatar) %}
+	{% if page.image and (layout.show-avatar or page.show-avatar) and page.show-img %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="{{ site.url }}">
