--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,8 +3,8 @@ common-css:
   - "/css/bootstrap.min.css"
   - "/css/bootstrap-social.css"
   - "/css/main.css"
-  - "/css/font-awesome.4.7.0.min.css"
 common-ext-css:
+  - "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 common-js:
   - "/js/jquery-1.11.2.min.js"
   - "/js/bootstrap.min.js"
