--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,11 @@
           {% include {{ page.footer-extra }} %}
         </div>
       {% endif %}
+      {% if site.footer-extra %}
+        <div class="footer-custom-content">
+          {% include {{ site.footer-extra }} %}
+        </div>
+      {% endif %}
       <p class="copyright text-muted">
       {% if site.author %}
         {{ site.author }}
