--- a/_includes/footer-extra.html
+++ b/_includes/footer-extra.html
@@ -1,5 +1,5 @@
 <a href="{{ '/impressum' | prepend: site.baseurl }}"> Impressum </a>
 &nbsp;&bull;&nbsp;
-<a href="{{ '/datenschutz' | prepend: site.baseurl }}"> Datenschutz </a>
+<a href="{{ '/datenschutz' | prepend: site.baseurl }}"> Datenschutzerkl&auml;rung </a>
 &nbsp;&bull;&nbsp;
 <a href="{{ '/sitemap' | prepend: site.baseurl }}"> Sitemap </a>
