Add mermaid support

--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -36,3 +36,7 @@
     <script src="{{ js | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+{% if page.mermaid %} 
+  {% include mermaid.html %} 
+{% endif %}
