Change to default theme

--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -2,8 +2,8 @@
 <script>
   $(document).ready(function () {
     mermaid.initialize({
-        startOnLoad:true,
-      theme: "forest",
+      startOnLoad:true,
+      theme: "default",
     });
     window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
   });
