--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,15 +1,18 @@
-<div class ="image-gallery">
-    {% assign sorted = site.static_files | sort: 'date' | reverse %}
-    {% for file in sorted %}
+<ul class="image-gallery">
+  {% for file in site.static_files %}
     {% if file.path contains include.folder %}
-    {% if file.extname == '.png' or file.extname == '.jpg' or file.extname == '.jpeg' %}
-      {% assign filenameparts = file.path | split: "/" %}
-        {% assign filename = filenameparts | last | replace: file.extname,"" %}
-         <a href="{{ file.path | relative_url }}" title="{{ filename }}">
-           <img src="{{ file.path | relative_url }}" alt="{{ filename }}" />
-         </a>
-        {% endif %}
+      {% if file.extname == '.jpg' or file.extname == '.jpeg' or file.extname == '.png' %}
+        {% assign filenameparts = file.path | split: "/" %}
+        {% assign filename = filenameparts | last | replace: file.extname, "" %}
+        {% unless filename contains 'thump' %}
+          <li>
+            <a href="{{ file.path | relative_url }}" title="{{ filename }}">
+              <img src="{{ file.path | relative_url }}" alt="{{ filename }}" title="{{ filename }}" />
+              <!-- <span>{{ filename }}</span> -->
+            </a>
+          </li>
+        {% endunless %}
       {% endif %}
-    {% endfor %}
-</div>
-
+    {% endif %}
+  {% endfor %}
+</ul>
