--- a/assets/css/image-gallery.css
+++ b/assets/css/image-gallery.css
@@ -1,4 +1,4 @@
-.image-gallery {
+/* .image-gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -7,4 +7,32 @@
   width: 200px;
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0,0,0,0.3);
+} */
+
+.image-gallery {
+  overflow: auto; 
+  margin-left: -1%!important;
+}
+.image-gallery li {
+  float: left; 
+  display: block; 
+  margin: 0 0 1% 1%; 
+  width: 19%;
+}
+.image-gallery li a {
+  text-align: center; 
+  text-decoration: none!important; 
+  color: #777;
+}
+.image-gallery li a span {
+  display: block; 
+  text-overflow: ellipsis; 
+  overflow: hidden; 
+  white-space: nowrap; 
+  padding: 3px 0;
+}
+.image-gallery li a img {
+  width: 100%; 
+  display: block;
+  border-radius: 8px;
 }
