--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -4,11 +4,16 @@
       {% if file.extname == '.jpg' or file.extname == '.jpeg' or file.extname == '.png' %}
         {% assign filenameparts = file.path | split: "/" %}
         {% assign filename = filenameparts | last | replace: file.extname, "" %}
+        {% assign title = filename %}
+        {% if include.title == "False" %}
+          {% assign title = "" %}
+        {% endif %}
+
         {% unless filename contains 'thump' %}
           <li>
-            <a href="{{ file.path | relative_url }}" title="{{ filename }}">
-              <img src="{{ file.path | relative_url }}" alt="{{ filename }}" title="{{ filename }}" />
-              <!-- <span>{{ filename }}</span> -->
+            <a href="{{ file.path | relative_url }}" title="{{ title }}">
+              <img src="{{ file.path | relative_url }}" alt="{{ filename }}" title="{{ title }}" />
+              <span>{{ title }}</span>
             </a>
           </li>
         {% endunless %}
