--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -5,7 +5,7 @@
         {% assign filenameparts = file.path | split: "/" %}
         {% assign filename = filenameparts | last | replace: file.extname, "" %}
         {% assign title = filename %}
-        {% if include.title == "False" %}
+        {% if include.title == false %}
           {% assign title = "" %}
         {% endif %}
 
