--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -9,24 +9,24 @@
           {% assign title = "" %}
         {% endif %}
 
-        {% comment %} Get thump file {% endcomment %}
-        {% assign thump_filename = filename | append: "_thump" | append: file.extname %}
-        {% assign thump_dir = file.path | replace: filename, "" | replace: file.extname, "" %}
-        {% assign thump = thump_dir | append: thump_filename %}
-        {% assign thump_exists = false %}
+        {% comment %} Get thumb file {% endcomment %}
+        {% assign thumb_filename = filename | append: "_thumb" | append: file.extname %}
+        {% assign thumb_dir = file.path | replace: filename, "" | replace: file.extname, "" %}
+        {% assign thumb = thumb_dir | append: thumb_filename %}
+        {% assign thumb_exists = false %}
         {% for static_file in site.static_files %}
-          {% if static_file.path contains thump %}
-            {% assign thump_exists = true %}
+          {% if static_file.path contains thumb %}
+            {% assign thumb_exists = true %}
           {% endif %}
         {% endfor %}
-        {% if thump_exists == false %}
-          {% assign thump = file.path %}
+        {% if thumb_exists == false %}
+          {% assign thumb = file.path %}
         {% endif %}
 
-        {% unless filename contains '_thump' %}
+        {% unless filename contains '_thumb' %}
           <li>
             <a href="{{ file.path | relative_url }}" title="{{ title }}">
-              <img src="{{ thump | relative_url }}" alt="{{ filename }}" title="{{ title }}" />
+              <img src="{{ thumb | relative_url }}" alt="{{ filename }}" title="{{ title }}" />
               <span>{{ title }}</span>
             </a>
           </li>
