--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,7 +1,8 @@
 <ul class="image-gallery">
   {% for file in site.static_files %}
     {% if file.path contains include.folder %}
-      {% if file.extname == '.jpg' or file.extname == '.jpeg' or file.extname == '.png' %}
+      {% assign ext = file.extname | downcase %}
+      {% if ext == '.jpg' or ext == '.jpeg' or ext == '.png' %}
         {% assign filenameparts = file.path | split: "/" %}
         {% assign filename = filenameparts | last | replace: file.extname, "" %}
         {% assign title = filename %}
