--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -3,28 +3,17 @@
     {% if file.path contains include.folder %}
       {% assign ext = file.extname | downcase %}
       {% if ext == '.jpg' or ext == '.jpeg' or ext == '.png' %}
-        {% assign filenameparts = file.path | split: "/" %}
-        {% assign filename = filenameparts | last | replace: file.extname, "" %}
-        {% assign title = filename %}
-        {% if include.title == false %}
-          {% assign title = "" %}
-        {% endif %}
-
-        {% comment %} Get thumb file {% endcomment %}
-        {% assign thumb_filename = filename | append: "_thumb" | append: file.extname %}
-        {% assign thumb_dir = file.path | replace: filename, "" | replace: file.extname, "" %}
-        {% assign thumb = thumb_dir | append: thumb_filename %}
-        {% assign thumb_exists = false %}
-        {% for static_file in site.static_files %}
-          {% if static_file.path contains thumb %}
-            {% assign thumb_exists = true %}
-          {% endif %}
-        {% endfor %}
-        {% if thumb_exists == false %}
-          {% assign thumb = file.path %}
-        {% endif %}
-
+        {% assign filename = file.path | split: "/" | last | replace: file.extname, "" %}
         {% unless filename contains '_thumb' %}
+          {% assign title = filename %}
+          {% if include.title == false %}
+            {% assign title = "" %}
+          {% endif %}
+          {% assign thumb = file.path | replace: file.extname, "_thumb" | append: file.extname %}
+          {% assign thumb_exists = site.static_files | where: "path", thumb | size > 0 %}
+          {% if thumb_exists == 0 %}
+            {% assign thumb = file.path %}
+          {% endif %}
           <li>
             <a href="{{ file.path | relative_url }}" title="{{ title }}">
               <img src="{{ thumb | relative_url }}" alt="{{ filename }}" title="{{ title }}" />
